Sutter Health/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>By_Pass_Validations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By Pass Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_create_IL_SR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can create IL/SR?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployeeAffiliate__c</fullName>
        <label>Employee Affiliate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ADID__c</fullName>
        <formula>Contact.Employee_ADID__c</formula>
        <label>Employee ADID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email__c</fullName>
        <formula>Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ok_To_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PDV User Contact Information &quot;Ok To Text&quot;</description>
        <label>Ok To Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication_Method__c</fullName>
        <label>Preferred Communication Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Basket</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_Address__c</fullName>
        <label>Provider Correspondence Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_City__c</fullName>
        <label>Provider Correspondence City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_Fax__c</fullName>
        <label>Provider Correspondence Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_Phone__c</fullName>
        <description>Provider Correspondence Phone</description>
        <label>Provider Correspondence Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_PostalCode__c</fullName>
        <label>Provider Correspondence PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_State__c</fullName>
        <label>Provider Correspondence State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <formula>IF(isblank(text(Contact.Provider_Type__c)),&apos;&apos;, text(Contact.Provider_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <label>Requestor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CREATED_BY_NAME</field>
            <operation>equals</operation>
            <value>Darrel Owen</value>
        </filters>
        <label>Search for employee</label>
    </listViews>
    <listViews>
        <fullName>S3_CC_WFM</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>s3 tier 1,s3 tier 2,s3 dmc,s3 tier 3 dmc,SOC Agents</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>S3 Revenue Cycle,S3 Finance,S3 Human Resources,S3 Document,pdi</value>
        </filters>
        <label>S3 CC WFM</label>
    </listViews>
    <listViews>
        <fullName>SHMMN</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>SHMMN</value>
        </filters>
        <label>SHMMN</label>
    </listViews>
    <listViews>
        <fullName>Search_by_Employee_by_Last_Name</fullName>
        <booleanFilter>1</booleanFilter>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>larosae1@pamf.org</value>
        </filters>
        <label>Search for employee by Email</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Community_Username_Validation_Rule</fullName>
        <active>true</active>
        <description>This rule prevents Community Users from changing their username</description>
        <errorConditionFormula>AND(
$Profile.Name=&quot;Community Portal&quot;,
ISCHANGED(Username)
)</errorConditionFormula>
        <errorMessage>Username is set by the system, changes are not allowed.</errorMessage>
    </validationRules>
</CustomObject>